# KR_BD

./: README.md  pyproject.toml
data/: company.json  config.py  vacancies.json
src/: API_classes.py  TEMP.py  config.py  creating_database.py  db_manager.py  main.py  preparatoin.py  utils.py  vacancies.py  work_database.py  work_json.py  work_vacancies.py
