[tool.poetry]
name = "kr-oop"
version = "0.1.0"
description = ""
authors = ["Dmitriy Naymov <prp4@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
yes = "^0.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
